err/kippo-extra.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kippo_extra'...
Listing './lib/python3.5/site-packages/kippo_extra/commands'...
Compiling './lib/python3.5/site-packages/kippo_extra/commands/iptables.py'...
***   File "./lib/python3.5/site-packages/kippo_extra/commands/iptables.py", line 100
    except OptionParsingError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kippo_extra/commands/uname.py'...
***   File "./lib/python3.5/site-packages/kippo_extra/commands/uname.py", line 33
    except OptionParsingError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kippo_extra/loader.py'...
***   File "./lib/python3.5/site-packages/kippo_extra/loader.py", line 49
    exec bytecode in module.__dict__
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/kippo_extra/patches'...
Listing './lib/python3.5/site-packages/kippo_extra-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
